[package]
name = "bili_bili_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = "0.12.0"
image = "0.24.6"
reqwest = { version = "0.11.18",features = ["blocking","json"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
url = "2.3.1"
serde = "1.0.163"
chrono = "0.4.6"
tokio-bililive = { git = "https://github.com/ganlvtech/tokio-bililive.git", version = "0.1.0" }
anyhow = "1.0.71"
brotli-decompressor = "2.3.2"
byteorder = "1.4.3"
inflate = "0.4.5"
tide = "0.16.0"
regex = "1.8.4"
urlencoding = "2.1.2"